# proshop_mern

./: .gitignore  .mcp.json  CLAUDE.md  DESIGN.md  README.md  project-index.json  report.md
.claude/scripts/: update_project_index.py
backend/: features.json
backend/controllers/: featureFlagsController.js  orderController.js  userController.js
backend/routes/: featureFlagsRoutes.js
docs/: README.md  architecture.md  chunks.jsonl
docs-archived-2026-06-07/: FINDINGS.md  docs-report.md  report.md
docs/adr/: adr-006-features-json-shared-store.md
docs/specs/: feature-flags-backend-spec.md  rag-pipeline-spec.md
frontend/: .env.example
frontend/src/: App.js  index.css
homework-m6/stage1-code-review/: architecture-findings.jsonl  architecture-review.md  performance-findings.jsonl  performance-review.md  security-findings.jsonl  security-review.md  synthesis.md
homework-m6/stage2-fix-top3/: fix-1-idor-getorderbyid.md  fix-2-getusers-password-leak.md  fix-3-updateorderpaid-trust.md
homework-m6/stage3-living-docs/: 00-plan.md  CLAUDE.md  docs-audit.md  hook-demo.txt  project-index.json  stage3-synthesis.md
homework-m6/stage4-tests-agent/: README.md  coverage-report.txt
homework/M5/: README.md  docker-compose.yml  logs.json  simulate_wf1.py  simulate_wf2.py  wf1-manual-trigger.json  wf2-scheduled-monitor.json
mcp-servers/feature-flags/: pyproject.toml  run_search_v2_scenario.py  server.py
mcp-servers/feature-flags/__tests__/: conftest.py  test_server.py
mcp-servers/search-docs/: pyproject.toml  server.py
rag/: ingest.py  pyproject.toml  query.py
(+45 files in other folders)
