[project]
name = "proshop-feature-flags-mcp"
version = "0.1.0"
description = "FastMCP server for managing proshop_mern feature flags via features.json"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
